# macheim

./: .gitignore  DEVLOG.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: backup.rs  bepinex.rs  config.rs  game.rs  launch.rs  mod.rs  mods.rs  profiles.rs  thunderstore.rs
src-tauri/src/models/: installed_mod.rs  manifest.rs  mod.rs  profile.rs  thunderstore.rs
src-tauri/src/services/: backup_manager.rs  bepinex_installer.rs  config_editor.rs  dependency_resolver.rs  game_detector.rs  gatekeeper.rs  launcher.rs  mod.rs  mod_installer.rs  profile_manager.rs  thunderstore_client.rs
src/components/common/: LoadingSkeleton.tsx  ProgressBar.tsx  ProgressOverlay.tsx  Toast.tsx
src/components/config/: ConfigEditor.tsx
src/components/layout/: Header.tsx  MainLayout.tsx  SettingsPage.tsx  Sidebar.tsx
src/components/mods/: InstalledModList.tsx  ModCard.tsx  ModDetail.tsx  ModGrid.tsx  ModSearch.tsx  ModpackBrowser.tsx
src/components/profiles/: ProfileManager.tsx  ProfileSelector.tsx
src/components/setup/: SetupWizard.tsx
src/lib/: tauri.ts  types.ts
src/store/: appStore.ts  modStore.ts  profileStore.ts
